2007-02-26  Paolo Borelli  <pborelli@katamail.com>

	* src/baoab-treeview.c:
	* src/callbacks.c:

	Resort when toggling "allocated space".

2007-02-26  Fabio Marzocca  <thesaltydog@gmail.com>

	* src/baobab.c: (start_proc_on_dir):

	BUGZILLA: #411867 - baobab crashed with SIGSEGV 
	in pango_fc_font_lock_face()

2007-02-08  Dennis Cranston  <dennis_cranston@yahoo.com>

	* data/baobab.glade: Add tooltip to refresh toolbar button.

2007-01-09  Paolo Borelli  <pborelli@katamail.com>

	* src/baobab-ringschart.c: do not assert that percentage
	is > 0, it can be -1 when the scan is stopped.

2007-01-04  Paolo Borelli  <pborelli@katamail.com>

	* src/baobab.c:
	* src/baobab-treeview.c:
	* src/baobab-ringschart.c:
	* src/baobab-utils.c:

	Turn the percentage column is a double, since ringschart
	uses it for display calculation and since the progress cell
	renderer uses doubles. Percentage set to -1 now means that
	analysis is in progress.
	Drop the percentual text string from the model, we can use
	a simple cell_data_function and save some memory.

2006-12-26  Paolo Borelli  <pborelli@katamail.com>

	* src/baobab-ringschart.c:
	* src/baobab-tree-map.c:

	Small cleanups.

2006-12-12  Paolo Borelli  <pborelli@katamail.com>

	* src/baobab-ringschart.c (baobab_ringschart_motion_notify):
	simplify logic and fix drawing problem of the central circle
	when crossing the x axis.

2006-11-05 Alejandro G. Castro <acastro@igalia.com>

	* src/baobab-ringschart.c: Changed all the M_PI constants for
	G_PI, there are some platforms where the math constants are not
	defined.
	(tree_traverse): Fixed a problem with a GtkTreePath, we were using
	g_free instead gtk_tree_path_free and it was causing a leak.
	
2006-11-05 Alejandro G. Castro <acastro@igalia.com>

        Patch cotributed by Miguel A. Gomez <magomez@igalia.com>
	
	* src/baobab-ringschart.c (bug #363608):
	(draw_tip): Changed the way the tips are drawn. Now the lines to