@@ -30,6 +30,8 @@ enum
 	COL_DEVICE,
 	COL_MOUNT,
 	COL_TYPE,
+	COL_FS_SIZE,
+	COL_FS_AVAIL,
 	TOT_COLUMNS
 };
 
